--- a/index.html
+++ b/index.html
@@ -3380,7 +3380,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.51+20260210.1';
+    const APP_VERSION = 'v0.7.52+20260210.1';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -5721,23 +5721,78 @@
 	      return 'deal:(blank)';
 	    }
 
-    function buildPrevStageLookupForScorecard(prevDataset, sellerLabel, cutoffMonth) {
-      // key -> Set(stageNumber). We keep all candidates because the same deal
-      // can occasionally appear multiple times in scorecard details (ambiguity),
-      // and we want to pick the closest match to current stage.
-      const lookup = new Map();
-      if (!prevDataset || !prevDataset.scorecard || !prevDataset.scorecard.sellers) return lookup;
-      const bucketKey = sellerLabel === 'Overall' ? 'All (unique deals)' : sellerLabel;
-      const metric = (prevDataset.scorecard.sellers || {})[bucketKey] || {};
-      const details = (metric.kpi_details || {});
-      const rows = [...(details.stage_1_6 || []), ...(details.stage_7_8 || [])];
-      rows.forEach((r) => {
-        if (cutoffMonth && !passIntroCutoffMonth(r.intro_date, cutoffMonth)) return;
-        const n = stageNumber(r.stage);
-        if (n == null) return;
-        const keys = scorecardRecordMatchKeys(r);
-        keys.forEach((k) => {
-          if (!lookup.has(k)) lookup.set(k, new Set([n]));
+	    function scorecardInSellerScope(rec, sellerLabel) {
+	      if (!sellerLabel || sellerLabel === 'Overall') return true;
+	      const matched = Array.isArray(rec && rec.matched_sellers) ? rec.matched_sellers : [];
+	      if (matched.includes(sellerLabel)) return true;
+	      // Fallback when matched_sellers isn't present/filled: use deal_owner string.
+	      const owner = String((rec && (rec.deal_owner || rec.owner)) || '').toLowerCase();
+	      return owner.includes(String(sellerLabel || '').toLowerCase());
+	    }
+
+	    function buildScorecardKpiDetailsFromRows(rows, sellerLabel, cutoffMonth) {
+	      const out = {
+	        stage_1_2: [],
+	        stage_3_4: [],
+	        stage_5_6: [],
+	        stage_1_6: [],
+	        stage_7_8: [],
+	      };
+	      const seen = new Set();
+	      const push = (bucketKey, arr, rec) => {
+	        const k = scorecardCanonicalKey(rec);
+	        const dk = `${bucketKey}||${k}`;
+	        if (seen.has(dk)) return;
+	        seen.add(dk);
+	        arr.push(rec);
+	      };
+	      (Array.isArray(rows) ? rows : []).forEach((r) => {
+	        if (!passIntroCutoffMonth(r.intro_date, cutoffMonth)) return;
+	        if (!scorecardInSellerScope(r, sellerLabel)) return;
+	        const stageNorm = normalizeStage(String(r.stage || '').trim() || String(r.deal_stage || '').trim());
+	        const n = stageNumber(stageNorm);
+	        if (n == null || n < 1 || n > 8) return;
+	        const rec = { ...r, stage: stageNorm };
+	        if (n >= 1 && n <= 6) push('16', out.stage_1_6, rec);
+	        if (n === 1 || n === 2) push('12', out.stage_1_2, rec);
+	        if (n === 3 || n === 4) push('34', out.stage_3_4, rec);
+	        if (n === 5 || n === 6) push('56', out.stage_5_6, rec);
+	        if (n === 7 || n === 8) push('78', out.stage_7_8, rec);
+	      });
+	      return out;
+	    }
+
+	    function buildScorecardStageMapFromRows(rows, sellerLabel, cutoffMonth) {
+	      // canonicalKey -> stage label (best-effort, first occurrence wins)
+	      const map = new Map();
+	      (Array.isArray(rows) ? rows : []).forEach((r) => {
+	        if (!passIntroCutoffMonth(r.intro_date, cutoffMonth)) return;
+	        if (!scorecardInSellerScope(r, sellerLabel)) return;
+	        const stageNorm = normalizeStage(String(r.stage || '').trim() || String(r.deal_stage || '').trim());
+	        const n = stageNumber(stageNorm);
+	        if (n == null || n < 1 || n > 8) return;
+	        const rec = { ...r, stage: stageNorm };
+	        const k = scorecardCanonicalKey(rec);
+	        if (!map.has(k)) map.set(k, stageNorm || '-');
+	      });
+	      return map;
+	    }
+
+	    function buildPrevStageLookupForScorecard(prevDataset, sellerLabel, cutoffMonth) {
+	      // key -> Set(stageNumber). We keep all candidates because the same deal
+	      // can occasionally appear multiple times in scorecard details (ambiguity),
+	      // and we want to pick the closest match to current stage.
+	      const lookup = new Map();
+	      if (!prevDataset || !Array.isArray(prevDataset.all_deals_rows)) return lookup;
+	      const details = buildScorecardKpiDetailsFromRows(prevDataset.all_deals_rows, sellerLabel, cutoffMonth);
+	      const rows = [...(details.stage_1_6 || []), ...(details.stage_7_8 || [])];
+	      rows.forEach((r) => {
+	        const stageNorm = normalizeStage(String(r.stage || '').trim() || String(r.deal_stage || '').trim());
+	        const n = stageNumber(stageNorm);
+	        if (n == null) return;
+	        const keys = scorecardRecordMatchKeys(r);
+	        keys.forEach((k) => {
+	          if (!lookup.has(k)) lookup.set(k, new Set([n]));
           else lookup.get(k).add(n);
         });
       });
@@ -5842,18 +5897,8 @@
 	        }
 	      }
 
-	      const bucketKey = sellerLabel === 'Overall' ? 'All (unique deals)' : sellerLabel;
-	      const currentStageMap = new Map(); // canonicalKey -> current stage label (across all scorecard rows)
-	      const currMetric = (((window.__salesData || {}).scorecard || {}).sellers || {})[bucketKey] || {};
-	      const currDetails = (currMetric.kpi_details || {});
-	      const currAllRows = [
-	        ...(currDetails.stage_1_6 || []),
-	        ...(currDetails.stage_7_8 || []),
-	      ].filter((r) => !cutoffMonth || passIntroCutoffMonth(r.intro_date, cutoffMonth));
-	      currAllRows.forEach((r) => {
-	        const key = scorecardCanonicalKey(r);
-	        if (!currentStageMap.has(key)) currentStageMap.set(key, r.stage || '-');
-	      });
+		      const currentRows = (window.__salesData && Array.isArray(window.__salesData.all_deals_rows)) ? window.__salesData.all_deals_rows : [];
+		      const currentStageMap = buildScorecardStageMapFromRows(currentRows, sellerLabel, cutoffMonth);
 
 	      if (!records.length) {
 	        const tr = document.createElement('tr');
@@ -5939,32 +5984,29 @@
 	      // so they won't appear above. Add a second section listing removed deals for clarity.
 	      if (prevId) {
 	        try {
-	          const cachedPrev = versionDatasetCache.get(String(prevId));
-	          const prevDataset = cachedPrev && cachedPrev.dataset ? cachedPrev.dataset : null;
-	          const prevMetric = prevDataset && prevDataset.scorecard && prevDataset.scorecard.sellers
-	            ? (prevDataset.scorecard.sellers || {})[bucketKey] || {}
-	            : null;
-	          const prevDetails = prevMetric ? (prevMetric.kpi_details || {}) : {};
-	          // Extract the detailKey from the title suffix (we pass label text); safest is to infer by which records list was used.
-	          // We instead compute removed as: prev bucket (matching by canonical key) minus current bucket.
-	          const prevRowsAll = Array.isArray(records) ? [] : [];
-	          void prevRowsAll;
-	          const currSet = new Set((records || []).map(scorecardCanonicalKey));
-	          const prevBucketRows = (prevDetails && prevDetails.stage_1_6) ? prevDetails.stage_1_6 : [];
-	          const prevBucketFiltered = Array.isArray(prevBucketRows) ? prevBucketRows.filter((r) => !cutoffMonth || passIntroCutoffMonth(r.intro_date, cutoffMonth)) : [];
-	          // If this is not the stage_1_6 bucket, attempt to pick the right bucket by title.
-	          let prevBucket = prevBucketFiltered;
-	          const t = String(title || '').toLowerCase();
-	          if (t.includes('stage 1-2')) prevBucket = (prevDetails.stage_1_2 || []).filter((r) => !cutoffMonth || passIntroCutoffMonth(r.intro_date, cutoffMonth));
-	          else if (t.includes('stage 3-4')) prevBucket = (prevDetails.stage_3_4 || []).filter((r) => !cutoffMonth || passIntroCutoffMonth(r.intro_date, cutoffMonth));
-	          else if (t.includes('stage 5-6')) prevBucket = (prevDetails.stage_5_6 || []).filter((r) => !cutoffMonth || passIntroCutoffMonth(r.intro_date, cutoffMonth));
-	          else if (t.includes('won/lost')) prevBucket = (prevDetails.stage_7_8 || []).filter((r) => !cutoffMonth || passIntroCutoffMonth(r.intro_date, cutoffMonth));
-	          else if (t.includes('stage 1-6')) prevBucket = (prevDetails.stage_1_6 || []).filter((r) => !cutoffMonth || passIntroCutoffMonth(r.intro_date, cutoffMonth));
+		          const cachedPrev = versionDatasetCache.get(String(prevId));
+		          const prevDataset = cachedPrev && cachedPrev.dataset ? cachedPrev.dataset : null;
+		          const prevDetails = prevDataset && Array.isArray(prevDataset.all_deals_rows)
+		            ? buildScorecardKpiDetailsFromRows(prevDataset.all_deals_rows, sellerLabel, cutoffMonth)
+		            : {};
+		          // Extract the detailKey from the title suffix (we pass label text); safest is to infer by which records list was used.
+		          // We instead compute removed as: prev bucket (matching by canonical key) minus current bucket.
+		          const prevRowsAll = Array.isArray(records) ? [] : [];
+		          void prevRowsAll;
+		          const currSet = new Set((records || []).map(scorecardCanonicalKey));
+		          // Default to stage_1_6 bucket; adjust based on the title.
+		          let prevBucket = (prevDetails && prevDetails.stage_1_6) ? prevDetails.stage_1_6 : [];
+		          const t = String(title || '').toLowerCase();
+		          if (t.includes('stage 1-2')) prevBucket = (prevDetails.stage_1_2 || []);
+		          else if (t.includes('stage 3-4')) prevBucket = (prevDetails.stage_3_4 || []);
+		          else if (t.includes('stage 5-6')) prevBucket = (prevDetails.stage_5_6 || []);
+		          else if (t.includes('won/lost')) prevBucket = (prevDetails.stage_7_8 || []);
+		          else if (t.includes('stage 1-6')) prevBucket = (prevDetails.stage_1_6 || []);
 
-	          const removed = [];
-	          const prevMap = new Map();
-	          prevBucket.forEach((r) => {
-	            const k = scorecardCanonicalKey(r);
+		          const removed = [];
+		          const prevMap = new Map();
+		          prevBucket.forEach((r) => {
+		            const k = scorecardCanonicalKey(r);
 	            if (!prevMap.has(k)) prevMap.set(k, r);
 	          });
 	          prevMap.forEach((r, k) => {
@@ -6045,9 +6087,12 @@
 	      scorecardStateBySeller = {};
 	      scorecardSummaryEls = {};
 
-      // Apply additional Intro cutoff in this tab (beyond backend snapshot cutoff).
+      // Weekly Scorecard MUST be internally consistent:
+      // - Stage KPIs/popup and funnel reflect the same universe as closures.
+      // So we compute KPI buckets from the raw Monday rows (all_deals_rows) using:
+      // seller scope + intro cutoff + canonical stage normalization.
       const cutoffMonth = scorecardIntroCutoffMonthState || null;
-      const filterRecords = (arr) => (Array.isArray(arr) ? arr.filter((r) => passIntroCutoffMonth(r.intro_date, cutoffMonth)) : []);
+      const baseRows = Array.isArray(data.all_deals_rows) ? data.all_deals_rows : [];
 
       const scorecardSellerSelect = document.getElementById('scorecard-seller');
       if (scorecardSellerSelect) {
@@ -6085,28 +6130,26 @@
 	      }
 
 	      renderEntries.forEach(({ label: seller, metric: m }) => {
-	        // Recompute counts based on filtered details.
-	        const detailsRaw = m.kpi_details || {};
-	        const d12 = filterRecords(detailsRaw.stage_1_2);
-	        const d34 = filterRecords(detailsRaw.stage_3_4);
-	        const d16 = filterRecords(detailsRaw.stage_1_6);
-	        const d56 = filterRecords(detailsRaw.stage_5_6);
-	        const d78 = filterRecords(detailsRaw.stage_7_8);
+	        const detailsRaw = buildScorecardKpiDetailsFromRows(baseRows, seller, cutoffMonth);
+	        const d12 = detailsRaw.stage_1_2 || [];
+	        const d34 = detailsRaw.stage_3_4 || [];
+	        const d16 = detailsRaw.stage_1_6 || [];
+	        const d56 = detailsRaw.stage_5_6 || [];
+	        const d78 = detailsRaw.stage_7_8 || [];
 
 	        // Previous version counts for deltas (best-effort).
 	        let p12 = d12.length, p34 = d34.length, p16 = d16.length, p56 = d56.length, p78 = d78.length;
 	        let prevStageCounts = {};
 	        let hasPrev = false;
-	        if (prevDataset && prevDataset.scorecard && prevDataset.scorecard.sellers) {
+	        let prevDetailsComputed = null;
+	        if (prevDataset && Array.isArray(prevDataset.all_deals_rows)) {
 	          hasPrev = true;
-	          const bucketKey = seller === 'Overall' ? 'All (unique deals)' : seller;
-	          const pm = (prevDataset.scorecard.sellers || {})[bucketKey] || {};
-	          const pDetails = (pm.kpi_details || {});
-	          const pd12 = filterRecords(pDetails.stage_1_2);
-	          const pd34 = filterRecords(pDetails.stage_3_4);
-	          const pd16 = filterRecords(pDetails.stage_1_6);
-	          const pd56 = filterRecords(pDetails.stage_5_6);
-	          const pd78 = filterRecords(pDetails.stage_7_8);
+	          prevDetailsComputed = buildScorecardKpiDetailsFromRows(prevDataset.all_deals_rows, seller, cutoffMonth);
+	          const pd12 = prevDetailsComputed.stage_1_2 || [];
+	          const pd34 = prevDetailsComputed.stage_3_4 || [];
+	          const pd16 = prevDetailsComputed.stage_1_6 || [];
+	          const pd56 = prevDetailsComputed.stage_5_6 || [];
+	          const pd78 = prevDetailsComputed.stage_7_8 || [];
 	          p12 = pd12.length; p34 = pd34.length; p16 = pd16.length; p56 = pd56.length; p78 = pd78.length;
 	          prevStageCounts = {};
 	          [...pd16, ...pd78].forEach((r) => {
@@ -6118,18 +6161,18 @@
 	          ...m,
 	          stage_1_2_count: d12.length,
 	          stage_3_4_count: d34.length,
-          stage_1_6_count: d16.length,
-          stage_5_6_count: d56.length,
-          stage_7_8_count: d78.length,
-          kpi_details: {
-            ...detailsRaw,
-            stage_1_2: d12,
-            stage_3_4: d34,
-            stage_1_6: d16,
-            stage_5_6: d56,
-            stage_7_8: d78,
-          },
-        };
+	          stage_1_6_count: d16.length,
+	          stage_5_6_count: d56.length,
+	          stage_7_8_count: d78.length,
+	          kpi_details: {
+	            ...(detailsRaw || {}),
+	            stage_1_2: d12,
+	            stage_3_4: d34,
+	            stage_1_6: d16,
+	            stage_5_6: d56,
+	            stage_7_8: d78,
+	          },
+	        };
         scorecardStateBySeller[seller] = filteredMetric;
         const card = document.createElement('div');
         card.className = 'score-card';
@@ -6171,7 +6214,7 @@
 	          ['Stage 5-6', Number(filteredMetric.stage_5_6_count || 0), d56, p56, 'stage_5_6'],
 	          ['Won/Lost (7-8)', Number(filteredMetric.stage_7_8_count || 0), d78, p78, 'stage_7_8'],
 	        ];
-	        entries.forEach(([label, currCount, currRows, prevCount, detailKey]) => {
+		        entries.forEach(([label, currCount, currRows, prevCount, detailKey]) => {
 	          const box = document.createElement('div');
 	          box.className = 'kpi clickable-kpi';
 	          const l = document.createElement('div');
@@ -6185,12 +6228,9 @@
 	          const v = document.createElement('div');
 	          v.className = 'kpi-value';
 	          v.textContent = money.format(currCount || 0);
-	          const prevRows = prevDataset && prevDataset.scorecard && prevDataset.scorecard.sellers
-	            ? (((((prevDataset.scorecard.sellers || {})[(seller === 'Overall' ? 'All (unique deals)' : seller)] || {}).kpi_details || {})[detailKey]) || [])
-	            : [];
-	          const prevRowsFiltered = filterRecords(prevRows);
-	          const diff = countAddsRemoves(currRows || [], prevRowsFiltered || []);
-	          const tick = movementTickersEl(diff.added, diff.removed);
+		          const prevRowsFiltered = prevDetailsComputed && prevDetailsComputed[detailKey] ? prevDetailsComputed[detailKey] : [];
+		          const diff = countAddsRemoves(currRows || [], prevRowsFiltered || []);
+		          const tick = movementTickersEl(diff.added, diff.removed);
 	          vRow.appendChild(v);
 	          vRow.appendChild(tick);
 	          box.appendChild(l);
@@ -6217,18 +6257,15 @@
 	          if (!stageCurrSets[st]) stageCurrSets[st] = new Set();
 	          stageCurrSets[st].add(scorecardCanonicalKey(r));
 	        });
-	        const stagePrevSets = {};
-	        if (prevDataset && prevDataset.scorecard && prevDataset.scorecard.sellers) {
-	          const bucketKey = seller === 'Overall' ? 'All (unique deals)' : seller;
-	          const pm = (prevDataset.scorecard.sellers || {})[bucketKey] || {};
-	          const pDetails = (pm.kpi_details || {});
-	          const pRows = [...filterRecords(pDetails.stage_1_6), ...filterRecords(pDetails.stage_7_8)];
-	          pRows.forEach((r) => {
-	            const st = String(r.stage || '').trim() || '(blank)';
-	            if (!stagePrevSets[st]) stagePrevSets[st] = new Set();
-	            stagePrevSets[st].add(scorecardCanonicalKey(r));
-	          });
-	        }
+		        const stagePrevSets = {};
+		        if (prevDetailsComputed) {
+		          const pRows = [...(prevDetailsComputed.stage_1_6 || []), ...(prevDetailsComputed.stage_7_8 || [])];
+		          pRows.forEach((r) => {
+		            const st = String(r.stage || '').trim() || '(blank)';
+		            if (!stagePrevSets[st]) stagePrevSets[st] = new Set();
+		            stagePrevSets[st].add(scorecardCanonicalKey(r));
+		          });
+		        }
 	        const stages = ['1. Intro','2. Qualification','3. Capability','4. Problem Scoping','6. Commercial Proposal','5. Contracting','7. Win','8. Loss'];
         const maxV = Math.max(1, ...stages.map((s) => Number(counts[s] || 0)));
 	        stages.forEach((label) => {
@@ -6463,11 +6500,9 @@
         }
 
         // Optional: small change context if compare-to is loaded.
-        if (prevDataset && prevDataset.scorecard && prevDataset.scorecard.sellers) {
-          const bucketKey = sellerLabel === 'Overall' ? 'All (unique deals)' : sellerLabel;
-          const pm = (prevDataset.scorecard.sellers || {})[bucketKey] || {};
-          const pDetails = (pm.kpi_details || {});
-          const pd16 = filterRecords(pDetails.stage_1_6);
+        if (prevDataset && Array.isArray(prevDataset.all_deals_rows)) {
+          const prevDetails = buildScorecardKpiDetailsFromRows(prevDataset.all_deals_rows, sellerLabel, cutoffMonth);
+          const pd16 = prevDetails.stage_1_6 || [];
           const currSet = new Set(d16.map(scorecardCanonicalKey));
           const prevSet = new Set(pd16.map(scorecardCanonicalKey));
           let added = 0, removed = 0;
