--- a/index.html
+++ b/index.html
@@ -3380,7 +3380,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.53+20260210.1';
+    const APP_VERSION = 'v0.7.54+20260210.1';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -4172,16 +4172,29 @@
       return v === true || v === 1 || v === '1' || v === 'true' || v === 'yes' || v === LIKELIHOOD_HELP;
     }
 
-    function isHelpNeeded(rec) {
-      const keys = dealHelpKeys(rec);
-      for (const k of keys) {
-        if (isHelpFlagValue(likelihoodState[k])) return true;
-      }
-      // Back-compat: if the old per-row likelihood key was used and set to Help.
-      const oldKey = likelihoodRecordKey(rec);
-      if (likelihoodState[oldKey] === LIKELIHOOD_HELP) return true;
-      return false;
-    }
+	    function isHelpNeeded(rec) {
+	      const keys = dealHelpKeys(rec);
+	      for (const k of keys) {
+	        if (isHelpFlagValue(likelihoodState[k])) return true;
+	      }
+	      // Back-compat: if the old per-row likelihood key was used and set to Help.
+	      const oldKey = likelihoodRecordKey(rec);
+	      if (likelihoodState[oldKey] === LIKELIHOOD_HELP) return true;
+	      return false;
+	    }
+
+	    function setHelpNeededForRecord(rec, enabled) {
+	      const helpKeys = dealHelpKeys(rec);
+	      const oldKey = likelihoodRecordKey(rec);
+	      if (enabled) {
+	        helpKeys.forEach((k) => { likelihoodState[k] = true; });
+	        // Migrate away from legacy per-row key to avoid "stuck on Yes".
+	        if (oldKey) delete likelihoodState[oldKey];
+	      } else {
+	        helpKeys.forEach((k) => { delete likelihoodState[k]; });
+	        if (oldKey) delete likelihoodState[oldKey];
+	      }
+	    }
 
     function classifyLikelihoodForSeller(metric) {
       // Weekly Scorecard: closures are derived from Start Date quarter (not manual tagging).
@@ -5960,26 +5973,25 @@
             opt.textContent = label;
             select.appendChild(opt);
           });
-	          const helpKeys = dealHelpKeys(r);
-	          const checked = isHelpNeeded(r);
-	          // Opportunistic migration: if old-style key had help, write to new key.
-	          if (checked && !isHistoricalView) {
-	            helpKeys.forEach((k) => { if (!isHelpFlagValue(likelihoodState[k])) likelihoodState[k] = true; });
-	          }
-	          select.value = checked ? 'yes' : '';
-	          if (isHistoricalView) {
-	            select.disabled = true;
-	            select.title = 'Read-only in historical version view';
-	          } else {
-	            select.addEventListener('change', () => {
-	              if (select.value === 'yes') helpKeys.forEach((k) => { likelihoodState[k] = true; });
-	              else helpKeys.forEach((k) => { delete likelihoodState[k]; });
-	              persistLocalStateBundle();
-	              queueSharedStorePush();
-	              if (activePopupSeller) updateLikelihoodSummaryForSeller(activePopupSeller);
-	              else if (r.seller) updateLikelihoodSummaryForSeller(r.seller);
-	            });
-	          }
+		          const helpKeys = dealHelpKeys(r);
+		          const checked = isHelpNeeded(r);
+		          // Opportunistic migration: if old-style key had help, write to new key.
+		          if (checked && !isHistoricalView) {
+		            setHelpNeededForRecord(r, true);
+		          }
+		          select.value = checked ? 'yes' : '';
+		          if (isHistoricalView) {
+		            select.disabled = true;
+		            select.title = 'Read-only in historical version view';
+		          } else {
+		            select.addEventListener('change', () => {
+		              setHelpNeededForRecord(r, select.value === 'yes');
+		              persistLocalStateBundle();
+		              queueSharedStorePush();
+		              if (activePopupSeller) updateLikelihoodSummaryForSeller(activePopupSeller);
+		              else if (r.seller) updateLikelihoodSummaryForSeller(r.seller);
+		            });
+		          }
           selTd.appendChild(select);
           tr.appendChild(selTd);
 	          body.appendChild(tr);
@@ -6055,21 +6067,20 @@
 	                opt.textContent = label;
 	                select.appendChild(opt);
 	              });
-	              const helpKeys = dealHelpKeys(r);
-	              const checked = isHelpNeeded(r);
-	              select.value = checked ? 'yes' : '';
-	              if (isHistoricalView) {
-	                select.disabled = true;
-	                select.title = 'Read-only in historical version view';
-	              } else {
-	                select.addEventListener('change', () => {
-	                  if (select.value === 'yes') helpKeys.forEach((k) => { likelihoodState[k] = true; });
-	                  else helpKeys.forEach((k) => { delete likelihoodState[k]; });
-	                  persistLocalStateBundle();
-	                  queueSharedStorePush();
-	                  if (activePopupSeller) updateLikelihoodSummaryForSeller(activePopupSeller);
-	                });
-	              }
+		              const helpKeys = dealHelpKeys(r);
+		              const checked = isHelpNeeded(r);
+		              select.value = checked ? 'yes' : '';
+		              if (isHistoricalView) {
+		                select.disabled = true;
+		                select.title = 'Read-only in historical version view';
+		              } else {
+		                select.addEventListener('change', () => {
+		                  setHelpNeededForRecord(r, select.value === 'yes');
+		                  persistLocalStateBundle();
+		                  queueSharedStorePush();
+		                  if (activePopupSeller) updateLikelihoodSummaryForSeller(activePopupSeller);
+		                });
+		              }
 	              selTd.appendChild(select);
 	              tr.appendChild(selTd);
 	              body.appendChild(tr);
